# aider_dev_agent

./: .gitignore  pyproject.toml
src/plex/: main.py
tests/: test_main.py
