[tool.poetry]
name = "plex-ai"
version = "0.1.0"
description = "AI-powered code analysis and improvement system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aider-chat = ">=0.9.0"
python-dotenv = "^1.0.0"
pytest = "^7.0"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
flake8 = "^6.0"

[tool.poetry.scripts]
plex-ai = "plex.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
